API request + design products

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <h1 class="nav-title">OneStopShop</h1>
         <img class="nav-icon" src="https://www.freeiconspng.com/thumbs/cart-icon/cart-icon-16.png" alt="card">
     </nav>
+    <ul class="products-container"></ul>
+
 
 
 
