change some design

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
     <nav>
         <h1 class="nav-title">OneStopShop</h1>
+        <a class="nav-link nav-contacts" href="">contacts</a>
+        <a class="nav-link nav-about" href="">About</a>
         <img class="nav-icon" src="https://www.freeiconspng.com/thumbs/cart-icon/cart-icon-16.png" alt="card">
     </nav>
     <ul class="products-container"></ul>
