add and setting cart

--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
         <img class="nav-icon" src="https://www.freeiconspng.com/thumbs/cart-icon/cart-icon-16.png" alt="card">
     </nav>
     <ul class="products-container"></ul>
-
-
-
-
-
+    <div class="cart">
+        <h2>Cart</h2>
+        <p class="cart-empty-title">Your cart is empty</p>
+        <div class="cart-list-wrapper">
+            <section class="cart-list-titles">
+                <h4 class="cart-list-item-title">Item</h4>
+                <h4 class="cart-list-price-title">Price</h4>
+                <h4 class="cart-list-quantity-title">Quantity</h4>
+            </section>
+            <ul class="cart-list"></ul>
+            <h3 class="total-amount">Total <span>0</span></h3>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 
